Decouple AWS and GKE ALB from generic ingress
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -32,6 +32,8 @@ annotations:
       description: Wildcard catch all ingress rule
     - kind: added
       description: Ingress extra rules to allow custom ingress custom rules
+    - kind: added
+      description: Dedicated ingress implementation for AWS and GKE Application Load Balancers
     - kind: changed
       description: Support for multiple ingress hosts and paths refactored into `extraHosts` and `extraPaths`
 
