--- a/charts/argo-cd/templates/argocd-server/gke/ingress.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.server.ingress.enabled (eq .Values.server.ingress.controller "generic") }}
+{{- if and .Values.server.ingress.enabled (eq .Values.server.ingress.controller "gke") }}
 {{- $insecure := index .Values.configs.params "server.insecure" | toString -}}
 {{- $servicePort := eq $insecure "true" | ternary .Values.server.service.servicePortHttp .Values.server.service.servicePortHttps -}}
 apiVersion: networking.k8s.io/v1
@@ -11,12 +11,17 @@ metadata:
     {{- with .Values.server.ingress.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.server.ingress.annotations }}
   annotations:
-    {{- range $key, $value := . }}
+    ingressClassName: "gce"
+    {{- if .Values.server.ingress.gke.managedCertificate.create }}
+    networking.gke.io/managed-certificates: {{ include "argo-cd.server.fullname" . }}
+    {{- end }}
+    {{- if .Values.server.ingress.gke.frontendConfig }}
+    networking.gke.io/v1beta1.FrontendConfig: {{ include "argo-cd.server.fullname" . }}
+    {{- end }}
+    {{- range $key, $value := .Values.server.ingress.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
-  {{- end }}
 spec:
   {{- with .Values.server.ingress.ingressClassName }}
   ingressClassName: {{ . }}
@@ -29,7 +34,7 @@ spec:
             {{- toYaml . | nindent 10 }}
           {{- end }}
           - path: {{ .Values.server.ingress.path }}
-            pathType: {{ $.Values.server.ingress.pathType }}
+            pathType: {{ .Values.server.ingress.pathType }}
             backend:
               service:
                 name: {{ include "argo-cd.server.fullname" . }}
