--- a/charts/argo-cd/templates/argocd-applicationset/ingress.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.applicationSet.enabled .Values.applicationSet.webhook.ingress.enabled -}}
+{{- if and .Values.applicationSet.enabled .Values.applicationSet.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -6,29 +6,29 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.applicationSet.name "name" .Values.applicationSet.name) | nindent 4 }}
-    {{- with .Values.applicationSet.webhook.ingress.labels }}
+    {{- with .Values.applicationSet.ingress.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.applicationSet.webhook.ingress.annotations }}
+  {{- with .Values.applicationSet.ingress.annotations }}
   annotations:
     {{- range $key, $value := . }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
   {{- end }}
 spec:
-  {{- with .Values.applicationSet.webhook.ingress.ingressClassName }}
+  {{- with .Values.applicationSet.ingress.ingressClassName }}
   ingressClassName: {{ . }}
   {{- end }}
   rules:
-    {{- if .Values.applicationSet.webhook.ingress.hostname }}
-    - host: {{ .Values.applicationSet.webhook.ingress.hostname }}
+    {{- if .Values.applicationSet.ingress.hostname }}
+    - host: {{ .Values.applicationSet.ingress.hostname }}
       http:
         paths:
-          {{- with .Values.applicationSet.webhook.ingress.extraPaths }}
+          {{- with .Values.applicationSet.ingress.extraPaths }}
             {{- toYaml . | nindent 10 }}
           {{- end }}
-          - path: {{ .Values.applicationSet.webhook.ingress.path }}
-            pathType: {{ $.Values.applicationSet.webhook.ingress.pathType }}
+          - path: {{ .Values.applicationSet.ingress.path }}
+            pathType: {{ $.Values.applicationSet.ingress.pathType }}
             backend:
               service:
                 name: {{ include "argo-cd.applicationSet.fullname" $ }}
@@ -47,17 +47,17 @@ spec:
                 port:
                   number: {{ .Values.applicationSet.service.port }}
     {{- end }}
-    {{- with .Values.applicationSet.webhook.ingress.extraRules }}
+    {{- with .Values.applicationSet.ingress.extraRules }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- if or .Values.applicationSet.webhook.ingress.tls .Values.applicationSet.webhook.ingress.extraTls }}
+  {{- if or .Values.applicationSet.ingress.tls .Values.applicationSet.ingress.extraTls }}
   tls:
-    {{- if .Values.applicationSet.webhook.ingress.tls }}
+    {{- if .Values.applicationSet.ingress.tls }}
     - hosts:
-      - {{ .Values.applicationSet.webhook.ingress.hostname }}
-      secretName: {{ printf "%s-tls" .Values.applicationSet.webhook.ingress.hostname }}
+      - {{ .Values.applicationSet.ingress.hostname }}
+      secretName: argocd-application-controller-tls
     {{- end }}
-    {{- with .Values.applicationSet.webhook.ingress.extraTls }}
+    {{- with .Values.applicationSet.ingress.extraTls }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
   {{- end }}
