--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.9-2024.1.22-375d827f3
+appVersion: v2.9-2024.1.24-ccd7124b3
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.51.6-7-cap-2.9-2024.1.22-375d827f3
+version: 5.51.6-8-cap-2.9-2024.1.24-ccd7124b3
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Upgrade Argo CD to v2.9-2024.1.22-375d827f3. With event-reporter support of app in non-controller namespaces when USE_GRPC=false
+      description: Upgrade Argo CD to v2.9-2024.1.24-ccd7124b3. With critical vulnerability fixes of stdlib and go-git/v5
