fix(argo-workflows): Fix trailing whitespace in controller ConfigMap
This commit addresses two places where trailing whitespace may be
generated in the workflow-controller ConfigMap.

When the value `.resourceRateLimit` is not null, a trailing whitespace
is added after "resourceRateLimit:". This commit trims that whitespace.

When the value `.sso.redirectUrl` is left as the default of empty string,
a trailing whitespace is left after "redirectUrl:" as this value is not
quoted. This commit pipes this value through `quote` to ensure this
whitespace is no longer trailing and instead followed by `"` pair.

The main motivation of this commit is to generate a workflow-controller
ConfigMap that is properly pretty-printed, which trailing whitespace
prevents.

Signed-off-by: James Slater <SlaterByte@users.noreply.github.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.4
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.40.7
+version: 0.40.8
 icon: https://argoproj.github.io/argo-workflows/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -17,4 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Wrong identation in artifactRepository block
+      description: Remove trailing whitespace from `.resourceRateLimit` when value is set and `.sso.redirectUrl` when value is an empty string.
