--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.6.4
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
-version: 2.34.1
+version: 2.34.2
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-rollouts/assets/logo.png
 keywords:
@@ -20,3 +20,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Added Gloo Platform provider RBAC rules
+    - kind: fixed
+      description: Fixed contour trafficrouter RBAC rules missing "patch" permission
