feat(argo-cd): Add `existingVolumes` setting for remaining deployments with emptyDir volumes
Signed-off-by: Matt Dainty <matt@bodgit-n-scarper.com>

--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -321,7 +321,11 @@ spec:
         {{- toYaml . | nindent 6 }}
       {{- end }}
       - name: argocd-home
+        {{- with .Values.controller.existingVolumes.argocdHome }}
+        {{- toYaml . | nindent 8 }}
+        {{- else }}
         emptyDir: {}
+        {{- end }}
       - name: argocd-repo-server-tls
         secret:
           secretName: argocd-repo-server-tls
