--- a/charts/argo-cd/templates/argocd-applicationset/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/clusterrole.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.createClusterRoles }}
+{{- if .Values.applicationSet.allowAnyNamespace }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
