--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -147,7 +147,7 @@ controller:
       drop:
         - ALL
   # -- enable Workflow Archive to store the status of workflows. Postgres and MySQL (>= 5.7.8) are available.
-  ## Ref: https://argo-workflows.readthedocs.io/en/latest/workflow-archive/
+  ## Ref: https://argo-workflows.readthedocs.io/en/stable/workflow-archive/
   persistence: {}
   # connectionPool:
   #   maxIdleConns: 100
@@ -186,12 +186,12 @@ controller:
 
   # -- Default values that will apply to all Workflows from this controller, unless overridden on the Workflow-level.
   # Only valid for 2.7+
-  ## See more: https://argoproj.github.io/argo-workflows/default-workflow-specs/
+  ## See more: https://argo-workflows.readthedocs.io/en/stable/default-workflow-specs/
   workflowDefaults: {}
   #   spec:
   #     ttlStrategy:
   #       secondsAfterCompletion: 84600
-  #     # Ref: https://argoproj.github.io/argo-workflows/artifact-repository-ref/
+  #     # Ref: https://argo-workflows.readthedocs.io/en/stable/artifact-repository-ref/
   #     artifactRepositoryRef:
   #       configMap: my-artifact-repository # default is "artifact-repositories"
   #       key: v2-s3-artifact-repository # default can be set by the `workflows.argoproj.io/default-artifact-repository` annotation in config map.
@@ -343,7 +343,7 @@ controller:
   priorityClassName: ""
 
   # -- Configure Argo Server to show custom [links]
-  ## Ref: https://argoproj.github.io/argo-workflows/links/
+  ## Ref: https://argo-workflows.readthedocs.io/en/stable/links/
   links: []
   # -- Configure Argo Server to show custom [columns]
   ## Ref: https://github.com/argoproj/argo-workflows/pull/10693
@@ -556,7 +556,7 @@ server:
 
   # -- Run the argo server in "secure" mode. Configure this value instead of `--secure` in extraArgs.
   ## See the following documentation for more details on secure mode:
-  ## https://argoproj.github.io/argo-workflows/tls/
+  ## https://argo-workflows.readthedocs.io/en/stable/tls/
   secure: false
 
   # -- Extra environment variables to provide to the argo-server container
@@ -568,11 +568,11 @@ server:
   authMode: ""
 
   # -- A list of supported authentication modes. Available values are `server`, `client`, or `sso`. If you provide sso, please configure `.Values.server.sso` as well.
-  ## Ref: https://argoproj.github.io/argo-workflows/argo-server-auth-mode/
+  ## Ref: https://argo-workflows.readthedocs.io/en/stable/argo-server-auth-mode/
   authModes: []
 
   # -- Extra arguments to provide to the Argo server binary.
-  ## Ref: https://argoproj.github.io/argo-workflows/argo-server/#options
+  ## Ref: https://argo-workflows.readthedocs.io/en/stable/argo-server/#options
   extraArgs: []
 
   logging:
@@ -829,7 +829,7 @@ customArtifactRepository: {}
 #     name: artifactory-creds
 #     key: password
 
-# -- The section of [artifact repository ref](https://argoproj.github.io/argo-workflows/artifact-repository-ref/).
+# -- The section of [artifact repository ref](https://argo-workflows.readthedocs.io/en/stable/artifact-repository-ref/).
 # Each map key is the name of configmap
 # @default -- `{}` (See [values.yaml])
 artifactRepositoryRef: {}
@@ -884,7 +884,7 @@ artifactRepositoryRef: {}
 
 emissary:
   # -- The command/args for each image on workflow, needed when the command is not specified and the emissary executor is used.
-  ## See more: https://argoproj.github.io/argo-workflows/workflow-executors/#emissary-emissary
+  ## See more: https://argo-workflows.readthedocs.io/en/stable/workflow-executors/#emissary-emissary
   images: []
   #  argoproj/argosay:v2:
   #    cmd: [/argosay]
