--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -577,6 +577,9 @@ controller:
   # Additional replicas will cause sharding of managed clusters across number of replicas.
   replicas: 1
 
+  # -- Maximum number of controller revisions that will be maintained in controller StatefulSet history
+  revisionHistoryLimit: 5
+
   ## Application controller Pod Disruption Budget
   ## Ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
   pdb:
