--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1215,20 +1215,33 @@ redis:
         drop:
         - ALL
 
-    # -- livenessProbe parameters to pass to the Redis server
-    livenessProbe:
-      initialDelaySeconds: 30
-      periodSeconds: 15
-      timeoutSeconds: 15
-      successThreshold: 1
-      failureThreshold: 5
-
-    # -- readinessProbe parameters to pass to the Redis server
+    ## Probes for Redis exporter (optional)
+    ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/
     readinessProbe:
+      # -- Enable Kubernetes liveness probe for Redis exporter (optional)
+      enabled: false
+      # -- Number of seconds after the container has started before [probe] is initiated
       initialDelaySeconds: 30
+      # -- How often (in seconds) to perform the [probe]
       periodSeconds: 15
+      # -- Number of seconds after which the [probe] times out
       timeoutSeconds: 15
+      # -- Minimum consecutive successes for the [probe] to be considered successful after having failed
       successThreshold: 1
+      # -- Minimum consecutive failures for the [probe] to be considered failed after having succeeded
+      failureThreshold: 5
+    livenessProbe:
+      # -- Enable Kubernetes liveness probe for Redis exporter
+      enabled: false
+      # -- Number of seconds after the container has started before [probe] is initiated
+      initialDelaySeconds: 30
+      # -- How often (in seconds) to perform the [probe]
+      periodSeconds: 15
+      # -- Number of seconds after which the [probe] times out
+      timeoutSeconds: 15
+      # -- Minimum consecutive successes for the [probe] to be considered successful after having failed
+      successThreshold: 1
+      # -- Minimum consecutive failures for the [probe] to be considered failed after having succeeded
       failureThreshold: 5
 
     # -- Resource limits and requests for redis-exporter sidecar
@@ -1260,20 +1273,33 @@ redis:
   # - secretRef:
   #     name: secret-name
 
-  # -- livenessProbe parameters to pass to the Redis server
-  livenessProbe:
-    initialDelaySeconds: 30
-    periodSeconds: 15
-    timeoutSeconds: 15
-    successThreshold: 1
-    failureThreshold: 5
-
-  # -- readinessProbe parameters to pass to the Redis server
+  ## Probes for Redis server (optional)
+  ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/
   readinessProbe:
+    # -- Enable Kubernetes liveness probe for Redis server
+    enabled: false
+    # -- Number of seconds after the container has started before [probe] is initiated
     initialDelaySeconds: 30
+    # -- How often (in seconds) to perform the [probe]
     periodSeconds: 15
+    # -- Number of seconds after which the [probe] times out
     timeoutSeconds: 15
+    # -- Minimum consecutive successes for the [probe] to be considered successful after having failed
     successThreshold: 1
+    # -- Minimum consecutive failures for the [probe] to be considered failed after having succeeded
+    failureThreshold: 5
+  livenessProbe:
+    # -- Enable Kubernetes liveness probe for Redis server
+    enabled: false
+    # -- Number of seconds after the container has started before [probe] is initiated
+    initialDelaySeconds: 30
+    # -- How often (in seconds) to perform the [probe]
+    periodSeconds: 15
+    # -- Number of seconds after which the [probe] times out
+    timeoutSeconds: 15
+    # -- Minimum consecutive successes for the [probe] to be considered successful after having failed
+    successThreshold: 1
+    # -- Minimum consecutive failures for the [probe] to be considered failed after having succeeded
     failureThreshold: 5
 
   # -- Additional containers to be added to the redis pod
