--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.10.0
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 6.0.0
+version: 6.0.1
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -26,13 +26,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: removed
-      description: Support for deprecated features
-    - kind: removed
-      description: Wildcard catch all ingress rule
-    - kind: added
-      description: Ingress extra rules to allow custom ingress custom rules
-    - kind: added
-      description: Dedicated ingress implementation for AWS and GKE Application Load Balancers
-    - kind: changed
-      description: Support for multiple ingress hosts and paths refactored into `extraHosts` and `extraPaths`
+    - kind: fixed
+      description: Fixed rendering of ingress extraHosts sections
