fix(argo-cd): Fix ingress-grpc tls
Signed-off-by: RuriRyan <2413490+RuriRyan@users.noreply.github.com>

--- a/charts/argo-cd/templates/argocd-server/ingress-grpc.yaml
+++ b/charts/argo-cd/templates/argocd-server/ingress-grpc.yaml
@@ -56,9 +56,9 @@ spec:
     {{- if .Values.server.ingressGrpc.tls }}
     - hosts:
       - {{ $hostname }}
-      secretName: {{ printf "%s-tls" $hostname }}
+      secretName: argocd-server-grpc-tls
     {{- end }}
-    {{- with .Values.server.ingressGrpc.tls }}
+    {{- with .Values.server.ingressGrpc.extraTls }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
   {{- end }}
