--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -249,6 +249,23 @@ spec:
                 key: reposerver.enable.git.submodule
                 name: argocd-cmd-params-cm
                 optional: true
+          - name: ARGOCD_REPO_SERVER_CODEFRESH_IGNORE_VERSION_CONFIG
+            valueFrom:
+              configMapKeyRef:
+                name: codefresh-cm
+                key: ignore-version-config
+                optional: true
+          - name: ARGOCD_REPO_SERVER_CODEFRESH_URL
+            valueFrom:
+              configMapKeyRef:
+                name: codefresh-cm
+                key: base-url
+                optional: true
+          - name: ARGOCD_REPO_SERVER_CODEFRESH_TOKEN
+            valueFrom:
+              secretKeyRef:
+                key: token
+                name: codefresh-token
           {{- if .Values.repoServer.useEphemeralHelmWorkingDir }}
           - name: HELM_CACHE_HOME
             value: /helm-working-dir
