--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2161,6 +2161,11 @@ repoServer:
   # -- Environment variables to pass to repo server
   env: []
 
+  # Applications versions configuration settings
+  versionConfiguration:
+    # Disable getting version configuration from the Codefresh API
+    disabled: false
+
   # -- envFrom to pass to repo server
   # @default -- `[]` (See [values.yaml])
   envFrom: []
